# RiadenieManipulatora

./: .gitignore
vypracovanie/model_spawner/: CMakeLists.txt  package.xml
vypracovanie/model_spawner/launch/: model_spawner.launch.py
vypracovanie/model_spawner/src/: model_spawner.cpp
vypracovanie/pose_teacher/: CMakeLists.txt  package.xml
vypracovanie/pose_teacher/config/: pose_teacher.rviz
vypracovanie/pose_teacher/launch/: pose_teacher.launch.py
vypracovanie/pose_teacher/src/: pose_teacher.cpp
zadanie/abb_model/config/: urdf.rviz
zadanie/abb_model/launch/: test_irb4600.launch.py
